--- a/app/css/mol.css
+++ b/app/css/mol.css
@@ -18,7 +18,7 @@ body {font-family: Arial, sans-serif; color: #141414; font-weight:700; }
 .mol-Map-LeftBottomControl .BOTTOM { position: relative; float: left; width: 100%; height: auto; margin-bottom: 5px; }
 
 .mol-Map-TopLeftControl {
-    margin-top: 5px;
+    margin-left: 5px;
 	width: 550px;
     height: auto;
     font-family: Arial, sans-serif;
