gbif data to json to profile working

--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -101,7 +101,7 @@ button:hover{
     cursor: pointer;
 }
 .mol-LayerControl-Layers .layer.selected{
-    border: 3px solid rgba(255,122,122,0.9);
+    border: 3px solid rgba(25, 25, 25, 0.75);
 }
 .mol-LayerControl-Layers .layer .layerName{
     float: left;
