--- a/app/templates/map-index-template.html
+++ b/app/templates/map-index-template.html
@@ -6,16 +6,15 @@
     <link rel="stylesheet" href="../../../css/widgets.css">
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
-    <!-- Loads JavaScript based on production or dev environment. -->
+    <script src="../../../js/lib/jquery-1.5.1.min.js"></script> 
+    <script src="../../../js/lib/jquery-ui-1.8.10.custom.min.js"></script> 
+    <script src="../../../js/lib/underscore-min.js"></script>    
+    <script src="../../../js/lib/backbone-min.js"></script> 
+    <script src="../../../js/lib/class.js"></script>
     {% if prod %}
-        <script src="../../../static/js/mol.js"></script>
+    <script src="../../../static/js/mol.js"></script>
     {% else %}
-        <script src="../../../js/lib/jquery-1.5.1.min.js"></script> 
-        <script src="../../../js/lib/jquery-ui-1.8.10.custom.min.js"></script> 
-        <script src="../../../js/lib/underscore-min.js"></script>    
-        <script src="../../../js/lib/backbone-min.js"></script> 
-        <script src="../../../js/lib/class.js"></script>
-        <script src="../../../js/mol.js"></script>
+    <script src="../../../js/mol.js?1"></script>
     {% endif %}
 
     <meta charset="utf-8" /> 
@@ -30,22 +29,22 @@
   <body>
 	<script type="text/javascript">
         $(document).ready(function() {
-            {% if !prod %}
-                <!-- Not production, so load split source, enable logging, etc. -->
-                MOL.src.load();
-                var mol = MOL(function(mol) {
-                    bus = new mol.events.Bus();
-                    api = new mol.ajax.Api(bus);
-                    var config = {bus: bus, api: api, logging:true};
-                    var app = new mol.app.Instance(config);
-                    app.run();
-                    return this;
-                });
-            {% else %}   
+            {% if prod %}
                 <!-- Production, so load app without logging and run it. -->
                 MOL(function(env) {
                    new env.app.Instance({logging: false}).run();
                 });           
+            {% else %}   
+                <!-- Not production, so load split source, enable logging, etc. -->
+                MOL.src.load();
+                <!-- var mol = MOL(function(mol) { -->
+                <!--     bus = new mol.events.Bus(); -->
+                <!--     api = new mol.ajax.Api(bus); -->
+                <!--     var config = {bus: bus, api: api, logging:true}; -->
+                <!--     var app = new mol.app.Instance(config); -->
+                <!--     app.run(); -->
+                <!--     return this; -->
+                <!-- }); -->
             {% endif %}
         });
     </script>
