--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -260,9 +260,7 @@ button:hover{
     visibility: hidden;
 }
 
-.mol-LayerControl-Results ol{
-    position: relative;
-    list-style-type: none;
+.mol-LayerControl-Results .searchResults{
     padding: 5px;
     margin: 0px;
     width: 61%;
@@ -273,6 +271,11 @@ button:hover{
     border-radius: 3px;
     max-height: 400px;
     overflow-y: auto;
+}
+.mol-LayerControl-Results .searchResults ol{
+    position: relative;
+    list-style-type: none;
+    padding: 0px;
 }
 
 .mol-LayerControl-Results ul {
