--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -269,13 +269,13 @@ button:hover{
     position: relative;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    max-height: 400px;
-    overflow-y: auto;
 }
-.mol-LayerControl-Results .searchResults ol{
+.mol-LayerControl-Results .searchResults .resultList{
     position: relative;
     list-style-type: none;
     padding: 0px;
+    max-height: 380px;
+    overflow-y: auto;
 }
 
 .mol-LayerControl-Results ul {
