--- a/app/css/mol.css
+++ b/app/css/mol.css
@@ -1,4 +1,8 @@
-body {font-family: Arial, sans-serif; color: #141414; font-weight:700; }
+html { height: 100% }
+body { height: 200%; margin: 0px; padding: 0px; overflow: hidden; font-family: Arial, sans-serif; color: #141414; font-weight:700;}
+#map { height: 50% }
+#meta { height: 50% }
+
 /* Set up RightControl defaults */
 .mol-Map-RightControl { margin-right: 5px; width: 290px; }
 .mol-Map-RightControl .TOP { position: relative; float: left; width: 100%; height: auto; margin-bottom: 5px; }
