--- a/app/templates/map-index-template.html
+++ b/app/templates/map-index-template.html
@@ -29,6 +29,7 @@
     <script src="../../../js/mol.ui.LayerList.js"></script>
     <script src="../../../js/mol.ui.Map.js"></script>
     <script src="../../../js/mol.ui.Search.js"></script>
+    <script src="../../../js/mol.ui.Metadata.js"></script>
     {% endif %}
 
     <meta charset="utf-8" /> 
