--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -94,6 +94,7 @@ button:hover{
     position: relative;
 }
 .mol-LayerControl-Layers .layer{
+    position: relative;
     width: 97%;
     float: left;
     margin-top: 3px;
@@ -130,15 +131,52 @@ button:hover{
     height: 18px;
     width: 18px;
 }
-.mol-LayerControl-Layers .layer .info{
+.mol-LayerControl-Layers .layer .buttonContainer {
+    width: 10%;
     float: left;
+    position: relative;
+    margin-right: 5px;
+}
+.mol-LayerControl-Layers .layer .toggle {
+    opacity: 0.0;
+	position:absolute;
+	left:0;
+	z-index:100;
+    float: left;
+	width:24px;
+	height:24px;
+    cursor: pointer;
+    
+}
+.mol-LayerControl-Layers .layer .customCheck:after{
+	content:url('/static/maps/layers/inactive.png');
+    margin: 2px;
+    padding: 0px 1px 0px 1px; 
+    height: 24px;
+	position:absolute;
+    left: 0;
+    background-color: rgba(25, 25, 25, 0.75);
+    -moz-box-shadow: 2px 2px 5px #000;
+    -webkit-box-shadow: 2px 2px 5px #000;
+    box-shadow: 2px 2px 5px #222;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    border: none;
+}
+.mol-LayerControl-Layers .layer .toggle:hover + .customCheck:after{
+    background-color: rgba(25, 25, 25, 1.0);
+    cursor: pointer;
+}
+.mol-LayerControl-Layers .layer .toggle:checked + .customCheck:after {
+	content:url('/static/maps/layers/active.png');
+}
+.mol-LayerControl-Layers .layer .info{
+    float: right;
+    position: relative;
     width: 10%;
     font-style: italic;
     font-size: 1.2em;
-}
-.mol-LayerControl-Layers .layer .toggle{
-    float: left;
-    width: 10%;
+    height: 24px;
 }
 
 
@@ -344,12 +382,12 @@ button:hover{
     margin-bottom: 2px;
 }
 .mol-LayerControl-Results .result .customCheck:after{
-	content:url('/static/unchecked.png');
+	content:url('/static/maps/search/unchecked.png');
 	position:absolute;
     left: 0;
 }
 .mol-LayerControl-Results .result .checkbox:checked + .customCheck:after {
-	content:url('/static/checked.png');
+	content:url('/static/maps/search/checked.png');
 }
 .mol-LayerControl-Results .pageNavigation{
     width: 50%;
