--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -111,6 +111,7 @@ button:hover{
     float: left;
     width: 60%;
     margin-left: 5px;
+    margin-right: 5px;
     pointer-events: none;
 }
 .mol-LayerControl-Layers .layer .layerNomial{
