--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -391,16 +391,16 @@ button:hover{
 .mol-LayerControl-Results .result .checkbox:checked + .customCheck:after {
 	content:url('/static/maps/search/checked.png');
 }
-.mol-LayerControl-Results .pageNavigation{
-    width: 50%;
+.mol-LayerControl-Results .searchResults .pageNavigation{
+    width: 80%;
     float: right;
     padding: 0px;
-    margin: 0px;
+    margin: 2px;
     margin-top: 5px;
-    margin-right: 6%;
 }
-.mol-LayerControl-Results .pageNavigation button{
+.mol-LayerControl-Results .searchResults .pageNavigation button{
     float: right;
-    margin-left: 8px;
-    font-size: 0.9em;
+    margin-right: 4px;
+    font-size: 1.1em;
+    padding: 3px;
 }
