--- a/app/css/mol.css
+++ b/app/css/mol.css
@@ -1,7 +1,8 @@
 html { height: 100% }
-body { height: 100%; margin: 0px; padding: 0px; overflow: auto; min-width: 720px;
+body { height: 100%; margin: 0px; padding: 0px; overflow: auto; 
+       min-width: 720px; min-height: 500px;
        font-family: Arial, sans-serif; color: #141414; font-weight:700;}
-#map { height: 100% }
+#map { height: 100%; min-height: 500px;}
 #metadata { height: 0px; overflow: hidden; }
 
 /* Set up RightControl defaults */
