--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -94,9 +94,40 @@ button:hover{
     position: relative;
 } 
 
+
+.mol-LayerControl-Layers ::-webkit-scrollbar {
+    width: 11px;
+    height: 0px;
+}
+.mol-LayerControl-Layers ::-webkit-scrollbar-button:vertical {
+    background-color: white;
+    border: 1px solid white;
+}
+.mol-LayerControl-Layers ::-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment {
+    display: block;
+}
+.mol-LayerControl-Layers
+::-webkit-scrollbar-button:vertical:start:increment,
+::-webkit-scrollbar-button:vertical:start:decrement,
+::-webkit-scrollbar-button:vertical:end:increment,
+::-webkit-scrollbar-button:vertical:end:decrement {
+    display: none;
+}
+.mol-LayerControl-Layers ::-webkit-scrollbar-thumb:vertical {
+    height: 50px;
+    background-color: white;
+}
+.mol-LayerControl-Layers .scrollContainer{
+    max-height: 400px;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: visible;
+}
+
 .mol-LayerControl-Layers .layer{
     position: relative;
-    width: 97%;
+    width: 96%;
     float: left;
     margin-top: 3px;
     padding: 2px;
