--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -61,7 +61,7 @@ button:hover{
     float: right;
     text-align: center;
     padding: 5px;
-    width: 60px;
+    width: 70px;
 }
 .mol-LayerControl-Menu div.add{
     -moz-border-radius-topleft: 3px;
@@ -87,6 +87,14 @@ button:hover{
         rgba(66,66,66,0.85) 69%
     );
     color: #fff;
+    text-align: left;
+    padding-left: 10px;
+    cursor: pointer;
+}
+.mol-LayerControl-Menu div.label img{
+    float: right;
+    height: 15px;
+    padding-right: 2px;
 }
 .mol-LayerControl-Layers {
     width: 100%;
