cranked up search result count

--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -1,5 +1,4 @@
-/* BEGIN Shared Styles
- * */
+/* BEGIN Shared Styles */
 
 /* sets defaults for units within a widget background greed fade theme, 
  * as well as min-height and 100% width */
