--- a/app/templates/map-index-template.html
+++ b/app/templates/map-index-template.html
@@ -4,6 +4,7 @@
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../../../css/mol.css">
     <link rel="stylesheet" href="../../../css/widgets.css">
+    <link rel="stylesheet" href="../../../css/metadata.css">
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
     <script src="../../../js/lib/jquery-1.5.1.min.js"></script> 
