--- a/utilities/chef/cookbooks/nginx/templates/default/layers.erb
+++ b/utilities/chef/cookbooks/nginx/templates/default/layers.erb
@@ -9,6 +9,12 @@ server {
                 allow  all;  
         }
         
+        location /hello {
+                root   /var/www;
+                index  index.html index.htm index.php;
+                allow  all;  
+        }
+        
         location /layers {
                 proxy_pass http://127.0.0.1:5002/layers;
                 allow all;
