hack that adds random number arg to mol.js to avoid browser caching hell

--- a/app/templates/map-index-template.html
+++ b/app/templates/map-index-template.html
@@ -13,7 +13,7 @@
     <script src="../../../js/lib/backbone-min.js"></script> 
     <script src="../../../js/lib/class.js"></script>
     {% if prod %}
-    <script src="../../../static/js/mol.js"></script>
+    <script src="../../../static/js/mol.js?r={{ r }}"></script>
     {% else %}
     <script src="../../../js/mol.js?"></script>
     <script src="../../../js/mol.app.js"></script>
