final cleanup on bulkloading extents

--- a/app/templates/map-index-template.html
+++ b/app/templates/map-index-template.html
@@ -37,6 +37,19 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
     <meta name="description" content="Map of Life - Range Map." /> 
     <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
+
+    <!-- Google Analytics -->
+    <script type="text/javascript">      
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-24875267-1']);
+      _gaq.push(['_trackPageview']);      
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();  
+    </script>
+
   </head>
   <body>
 	<script type="text/javascript">
